# secretary-transcribe

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/secretary_transcribe/: app.py  audio.py  auth.py  config.py  pipeline.py  transcribe.py  translate.py
src/secretary_transcribe/static/: index.html
tests/: conftest.py  test_app.py  test_pipeline.py
