[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secretary-transcribe"
version = "0.1.0"
description = "Hosted Afrikaans → English transcription service for WhatsApp voice notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openai>=1.40",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/secretary_transcribe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
